<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.mitrofanov.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.mitrofanov.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.mitrofanov.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/dataFragment"
        android:name="ru.mirea.mitrofanov.mireaproject.DataFragment"
        android:label="Data Fragment"
        tools:layout="@layout/fragment_data" />

    <fragment
        android:id="@+id/webViewFragment"
        android:name="ru.mirea.mitrofanov.mireaproject.WebViewFragment"
        android:label="Web View Fragment"
        tools:layout="@layout/fragment_web_view" />
    <fragment
        android:id="@+id/serviceFragment"
        android:name="ru.mirea.mitrofanov.mireaproject.ServiceFragment"
        android:label="fragment_service"
        tools:layout="@layout/fragment_service" />
    <fragment
        android:id="@+id/rotationFagment"
        android:name="ru.mirea.mitrofanov.mireaproject.RotationFagment"
        android:label="fragment_rotation"
        tools:layout="@layout/fragment_rotation" />
    <fragment
        android:id="@+id/cameraFragment"
        android:name="ru.mirea.mitrofanov.mireaproject.CameraFragment"
        android:label="fragment_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/recorderFragment"
        android:name="ru.mirea.mitrofanov.mireaproject.RecorderFragment"
        android:label="fragment_recorder"
        tools:layout="@layout/fragment_recorder" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="ru.mirea.mitrofanov.mireaproject.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/fileFragment"
        android:name="ru.mirea.mitrofanov.mireaproject.FileFragment"
        android:label="fragment_file"
        tools:layout="@layout/fragment_file" />
    <fragment
        android:id="@+id/httpsConnectionFragment"
        android:name="ru.mirea.mitrofanov.mireaproject.HttpsConnectionFragment"
        android:label="fragment_https_connection"
        tools:layout="@layout/fragment_https_connection" />
    <fragment
        android:id="@+id/mapFragment"
        android:name="ru.mirea.mitrofanov.mireaproject.MapFragment"
        android:label="fragment_map"
        tools:layout="@layout/fragment_map" />
</navigation>